--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.3.7",
