--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^12.0.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.2",
     "native-base": "^3.3.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
